Added Home glyphicon to header.

--- a/public/header.html
+++ b/public/header.html
@@ -15,7 +15,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/home">Come Together</a>
+			<a class="navbar-brand" href="/home"><span class="glyphicon glyphicon-home"></span> Come Together</a>
 		</div>
 
 		<!-- Add options to the navbar through list -->
