Standardized text fonts across the app.

--- a/public/footer.html
+++ b/public/footer.html
@@ -1,4 +1,5 @@
 <!-- Footer file -->
+<link href="/css/textFonts.css" rel="stylesheet">
 <link href="/css/footer.css" rel="stylesheet">
 
 <p style="margin-bottom:10px;"/></p>
