--- a/public/header.html
+++ b/public/header.html
@@ -1,4 +1,5 @@
 <!-- Header currently only contains a navbar -->
+<link href="/css/textFonts.css" rel="stylesheet">
 <link href="/css/header.css" rel="stylesheet">
 
 <nav class="navbar navbar-default navbar-fixed-top">
@@ -46,9 +47,9 @@
 			<form class="navbar-form" role="search">
 				<div class="form-group-sm" id="mySearchBar">
 					<div class="input-group">
-						<input type="text" class="form-control" placeholder="Search Projects">
+						<input type="text" class="form-control standardText" placeholder="Search Projects">
 						<span class="input-group-btn">
-							<button class="btn btn-success btn-sm">Search!</button>
+							<button class="btn btn-success btn-sm standardText">Search!</button>
 						</span>
 					</div>
 				</div>
